# Spook_ESP

./: README.md
ghost_esp_c6/: CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults
ghost_esp_c6/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
ghost_esp_c6/main/core/: callbacks.c  commandline.c  dns_server.c  sdio_transport.c  system_manager.c  utils.c
ghost_esp_c6/main/include/core/: callbacks.h  commandline.h  dns_server.h  sdio_transport.h  system_manager.h  utils.h
ghost_esp_c6/main/include/managers/: ap_manager.h  ble_manager.h  gps_manager.h  ieee802154_manager.h  net_pipe.h  sd_card_manager.h  settings_manager.h  wifi_manager.h
ghost_esp_c6/main/managers/: ap_manager.c  ble_manager.c  gps_manager.c  ieee802154_manager.c  net_pipe.c  sd_card_manager.c  settings_manager.c  wifi_manager.c
ghost_sdio_host/: CMakeLists.txt
ghost_sdio_host/include/: ghost_sdio_host.h
ghost_sdio_host/src/: ghost_sdio_host.c
